--- a/angular.json
+++ b/angular.json
@@ -27,8 +27,10 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+              "node_modules/@syncfusion/ej2-base/styles/material.css",
+              "node_modules/@syncfusion/ej2-angular-gantt/styles/material.css"
             ],
+
             "scripts": []
           },
           "configurations": {
